refactor: change link photo

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         <div class="mainWrp">
             <h1>Yury Yushkevich</h1>
             
-            <img src="myPhotoX150.jpg" alt="alt text" title="Photo" />
+            <img src="myPhotoX150.png" alt="alt text" title="Photo" />
 
             <div class="blockItem">
                 <h3 class="blockTitle">Personal information</h3>
