feat: correct html

--- a/index.html
+++ b/index.html
@@ -9,11 +9,11 @@
 <body>
     <div class="mainContainer">
         <div class="mainWrp">
-            <h1>Yury Yushkevich</h1>
+            <header><h1>Yury Yushkevich</h1></header>
             
-            <img src="myPhotoX150.png" alt="alt text" title="Photo" />
+            <section><img src="myPhotoX150.png" alt="alt text" title="Photo" /></section>
 
-            <div class="blockItem">
+            <section><div class="blockItem">
                 <h3 class="blockTitle">Personal information</h3>
                 <p><span class="boldText">Name: </span>Yury Yushkevich</p>
                 <p><span class="boldText">Address: </span>22 Lenina Street, apt. 25, Minsk, 220101, Belarus</p>
@@ -22,35 +22,41 @@
                 <p><span class="boldText">Date of birth: </span>15th August 1981</p>
                 <p><span class="boldText">Email: </span><a target="blank" href="mailto:yura.yushkevich@gmail.com">yura.yushkevich@gmail.com</a></p>    
             </div>
+            </section>
 
-            <div class="blockItem">
+            <section><div class="blockItem">
                 <h3 class="blockTitle">Objective</h3>
                 <p><span class="boldText">Developer.</span><br>I am interested in finding employment in a company where I can develop software. I like this job and I am sure that a programmer will never be out of work. The range of his activities is unimaginably wide. It is needed everywhere, in any modern production. With such a choice, you can not stay out of business.</p>
-            </div>
+            </div></section>
 
-            <div class="blockItem">
+            <section><div class="blockItem">
                 <h3 class="blockTitle">Education</h3>
                 <p><span class="boldText">Academy of MIA</span><br>August 1998 — July 2002 <br> "lawyer-jurist"</p>
                 <p><span class="boldText">Belarusian National Technological University</span><br>February 2012 — August 2013 <br> "Web design and computer graphics", qualification programmer-Web designer</p>
-            </div>
+            </div></section>
 
-            <div class="blockItem">
+            <section><div class="blockItem">
                 <h3 class="blockTitle">Qualifications</h3>
                 <p><span class="boldText">October-December 2008</span> TSOT CJSC Belhard - "programming in the C language"</p>
                 <p><span class="boldText">August – October 2013</span> Artox Digital Marketing School – "SEO specialist"</p>
             </div>
+        </section>
 
-            <div class="blockItem">
+            <section>
+                <div class="blockItem">
                 <h3 class="blockTitle">Level of English</h3>
                 <p>A2</p>
             </div>
+            </section>
 
-            <div class="blockItem">
+            <section><div class="blockItem">
                 <h3 class="blockTitle">Work experience</h3>
                 <p><span class="boldText">August 2013 – till now</span> Working for an individual entrepreneur as an html coder</p>
             </div>
+            </section>
 
-            <div class="blockItem">
+            <section>
+                <div class="blockItem">
                 <h3 class="blockTitle">Software tools used</h3>
                 <table>
                     <thead>
@@ -108,7 +114,9 @@
                     </tbody>
                     </table>
             </div>
+            </section>
 
+            <section>
             <div class="blockItem">
                 <h3 class="blockTitle">My works</h3>
                 <ol>
@@ -137,7 +145,9 @@
                     <li>Correction of errors on internal pages, site support, content filling - <a target="blank" href="https://rasagro.ru">rasagro.ru</a></li>
                     </ol>
             </div>
+        </section>
 
+        <section>
             <div class="blockItem border-n">
                 <h3 class="blockTitle">My code</h3>
                 <pre>
@@ -157,6 +167,7 @@ getResource('https://jsonplaceholder.typicode.com/posts/10000')
                     </code>
                 </pre>
             </div>
+        </section>
             </div>
         </div>
 </body>
