feat: get footer

--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
             </div>
         </section>
 
-        <section>
+        <footer>
             <div class="blockItem border-n">
                 <h3 class="blockTitle">My code</h3>
                 <pre>
@@ -167,7 +167,7 @@ getResource('https://jsonplaceholder.typicode.com/posts/10000')
                     </code>
                 </pre>
             </div>
-        </section>
+        </footer>
             </div>
         </div>
 </body>
