feat: create li

--- a/index.html
+++ b/index.html
@@ -16,8 +16,11 @@
             <section><div class="blockItem">
                 <h3 class="blockTitle">Personal information</h3>
                 <p><span class="boldText">Name: </span>Yury Yushkevich</p>
-                <p><span class="boldText">Address: </span>22 Lenina Street, apt. 25, Minsk, 220101, Belarus</p>
-                <p><span class="boldText">Phone number (Viber, Telegram): </span><a target="blank" href="tel:+375293226787">+375293226787</a></p>
+                <ul>
+                    <li><span class="boldText">Address: </span>22 Lenina Street, apt. 25, Minsk, 220101, Belarus</li>
+                    <li><span class="boldText">Phone number (Viber, Telegram): </span><a target="blank" href="tel:+375293226787">+375293226787</a></li>
+                </ul>
+
                 <p><span class="boldText">Marital status: </span>Married</p>
                 <p><span class="boldText">Date of birth: </span>15th August 1981</p>
                 <p><span class="boldText">Email: </span><a target="blank" href="mailto:yura.yushkevich@gmail.com">yura.yushkevich@gmail.com</a></p>    
