feat: add skills

--- a/index.html
+++ b/index.html
@@ -58,6 +58,17 @@
             </div>
             </section>
 
+            <section><div class="blockItem">
+                <h3 class="blockTitle">Skills</h3>
+                <ul>
+                    <li>HTML</li>
+                    <li>CSS</li>
+                    <li>GULP</li>
+                    <li>SASS</li>
+                </ul>
+            </div>
+            </section>
+
             <section>
                 <div class="blockItem">
                 <h3 class="blockTitle">Software tools used</h3>
