feat: add figure

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         <div class="mainWrp">
             <header><h1>Yury Yushkevich</h1></header>
             
-            <section><img src="myPhotoX150.png" alt="alt text" title="Photo" /></section>
+            <figure><img src="myPhotoX150.png" alt="alt text" title="Photo" /></figure>
 
             <section><div class="blockItem">
                 <h3 class="blockTitle">Personal information</h3>
