--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <div class="mainContainer">
-        <div class="mainWrp">
+        <main class="mainWrp">
             <header><h1>Yury Yushkevich</h1></header>
             
             <figure><img src="myPhotoX150.png" alt="alt text" title="Photo" /></figure>
@@ -182,7 +182,7 @@ getResource('https://jsonplaceholder.typicode.com/posts/10000')
                 </pre>
             </div>
         </footer>
-            </div>
+            </main>
         </div>
 </body>
 </html>
